--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       "name": "Alexander I. Zaytsev",
       "email": "hazzik@gmail.com",
       "url": "http://hazzik.ru"
+    },
+    {
+      "name": "Frank Förster",
+      "url": "http://frankfoerster.com"
     }
   ],
   "licenses": [
@@ -28,11 +32,21 @@
       "url": "http://opensource.org/licenses/GPL-2.0"
     }
   ],
-  "bugs": "https://github.com/hazzik/livequery/issues",
-  "homepage": "https://github.com/hazzik/livequery/",
-  "docs": "https://github.com/hazzik/livequery/blob/master/README.markdown",
-  "download": "https://raw.github.com/hazzik/livequery/master/jquery.livequery.min.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/frankfoerster/livequery.git"
+  },
+  "bugs": "https://github.com/frankfoerster/livequery/issues",
+  "homepage": "https://github.com/frankfoerster/livequery",
+  "docs": "https://github.com/frankfoerster/livequery/blob/master/README.markdown",
+  "download": "https://raw.github.com/frankfoerster/livequery/master/build/jquery.livequery.min.js",
   "dependencies": {
     "jquery": ">=1.3"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
