--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "title": "jQuery Live Query",
   "description": "Live Query utilizes the power of jQuery selectors by firing callbacks for matched elements auto-magically, even after the page has been loaded and the DOM updated.",
   "keywords": [
-    "live", "query", "livequery", "new-elements"
+    "live",
+    "query",
+    "livequery",
+    "new-elements"
   ],
   "version": "1.3.6",
   "author": {
@@ -47,6 +50,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-nuget": "https://github.com/hazzik/grunt-nuget/archive/mono.tar.gz",
+    "grunt-jquerymanifest": "~0.1.2"
   }
 }
